--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <style type="text/css">
 	body{
-		background-color: white;
+		background-color: #1E90FF;
 	}
 	.logo img{
 		width:80%;
@@ -333,21 +333,8 @@ marquee img{
 	</tr></div>
 
 <tr><td colspan="2" width="100%" align="center">
-<h2 style="font-size: 20px;">To Submit your assingment Please Click Submit</h2></td></tr>
-<tr><td colspan="2" width="100%" align="center"><form action=”mailto:akrgdob@gmail.com”
+<h2 style="font-size: 20px;">To Submit your assingment Please <a href = "https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZXhcwTsHSHBNMPhzvKghKlClmNMTQLBzJmXKXzmRqQWBkQkGWfGllLgtgchSDPXPwDhXV">Click Here</a></h2></td></tr>
 
-
-method=”POST”
-
-
-enctype=”multipart/form-data”
-
-
-name=”EmailForm”>
-	
-
-	<input type="submit" name="submit">
-</form></td></tr>
 
 <tr><td colspan="2" width="100%" >
 
