--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <style type="text/css">
 	body{
-		background-color: #1E90FF;
+		background-color: white;
 	}
 	.logo img{
 		width:80%;
@@ -227,7 +227,7 @@ marquee img{
 	<tr>
 		<td align="center" width = "40%">
 			<div class = "heading1">
-			<h1 style="font-family:cursive; color:white;">Here you can perform your Lab Works from Home!!
+			<h1 style="font-family:cursive; color:black;">Here you can perform your Lab Works from Home!!
 			We are providing different compilers to work 
 				on your lab assignments and to finish your programs</h1></div>
 		</td>
@@ -241,7 +241,7 @@ marquee img{
 
 	<tr>
 		<td colspan="2" align="center">
-			<h1 style="font-family:candara; color:white;">Available Compilers</h1>
+			<h1 style="font-family:candara; color:#0A1857;">Available Compilers</h1>
 		</td>
 	</tr>
 	
