--- a/templates/ads.html
+++ b/templates/ads.html
@@ -119,8 +119,9 @@
 		</td>
 	</tr>
 
-</table>
+<tr><td colspan = "2" align = "center">
 
 <h1 style="color: black;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2>
+<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
+	</table>
 </body></html>
