--- a/templates/python.html
+++ b/templates/python.html
@@ -4,7 +4,7 @@
 	<title>python page</title>
 	<style type="text/css">
 	body{
-		background-color: #1E90FF;
+		background-color: white;
 	}
 	.logo img{
 		width:80%;
@@ -112,15 +112,16 @@
 	<tr>
 		<td align="center" width="50%">
 			<div class = "image1">
-			<a href = "/p1" target="_blank"><img src = "{{url_for('static',filename = 'images/lb.png')}}" height="300px" width="300px;"></a></div>
+			<a href = "/p1" target="_blank"><img src = "{{url_for('static',filename = 'images/lb.png')}}" height="300px" width="50%;"></a></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "image2">
-			<a href = "https://www.programiz.com/python-programming/online-compiler/" target="_blank"><img src = "{{url_for('static',filename = 'images/sc.png')}}" height="300px" width="300px;" ></a></div>
+			<a href = "https://www.programiz.com/python-programming/online-compiler/" target="_blank"><img src = "{{url_for('static',filename = 'images/sc.png')}}" height="300px" width="50%;" ></a></div>
 		</td>
 	</tr>
 
-</table>
+<tr><td colspan = "2" align = "center">
 <h1 style="color: white;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2>
+<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
+	</table>
 </body></html>
