--- a/templates/j1.html
+++ b/templates/j1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>wt page</title>
+	<title>java page</title>
 	<style type="text/css">
 	body{
 		background-color: white;
@@ -136,82 +136,54 @@
 	</tr></table>
 	
 			<div class = "syllabus" id ="main">
-			<a href = "https://drive.google.com/open?id=1B9tCa7dlzY-bpnchRWRA367v8VMAtB_k" target="_blank"><h2>Syllabus of WT</h2></a></div>
+			<a href = "https://drive.google.com/open?id=1r-mxcvW2NMiwwVVBabMfAjyB54jMsxkt" target="_blank"><h2>Syllabus of JAVA</h2></a></div>
+	
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1Msjqs_AyZzyZoQM3ZZQdhxLEs6-8hhK3" target="_blank"><h2>Exercise 1</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=17URyGE0PQCSgUm98E2gT4LNu9FHIndte" target="_blank"><h2>Exercise 1</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1p_TY_MFCBXJYi4FltzcWEtTOVMUG8d-U" target="_blank"><h2>Exercise 2</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=14AINhndGyM-GADgzuNpujFMjgV7UzxoQ" target="_blank"><h2>Exercise 2</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1Dg7_LPI7M-b9Zuw52ax93D-WPfGTK42Z" target="_blank"><h2>Exercise 3</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1PhDIlDviTnHWNGuArKq7b9yytLXr--CQ" target="_blank"><h2>Exercise 3</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1v7wjVdn4JnsAZMcDK6oRJxCtGG0bNKHI" target="_blank"><h2>Exercise 4</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1pVwjc7KPpqUdYfvuWhvEmmbeGyqAKF4Y" target="_blank"><h2>Exercise 4</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1zAMRwmDl7Q7-LFcI8vXqgmiqMj0-GQLF" target="_blank"><h2>Exercise 5</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1_XLisX54Vw6B66CSvtXBu3lVmmSXcotG" target="_blank"><h2>Exercise 5</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1wkudFFIt5Hiiv943I2opYC4UQTeQneIN" target="_blank"><h2>Exercise 6</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1YSLSRyDKRnwRYdWZzUkQMRQaHicWdEZy" target="_blank"><h2>Exercise 6</h2></a></div>
+		<div class = "syllabus1"><a  href = "https://drive.google.com/open?id=1cauENllSFEHNeDrOMz-TG9uAuUwTPbdi" target="_blank"><h2>Exercise 7</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a  href = "https://drive.google.com/open?id=1Gq0WNBWgamHbcjo_4uGxcOzRzG8CJ68g" target="_blank"><h2>Exercise 7</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1yDUYVQ7-0teD4mr1CxxXz4JZ6RKg_tei" target="_blank"><h2>Exercise 8</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=12DM-TKXpFYQ54WHf13itsslVKRWUr8zx" target="_blank"><h2>Exercise 8</h2></a></div>
 
 
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=12MsnASvxGjU9mSroQmPqSctq67jEfS9G" target="_blank"><h2>Exercise 9</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1uQp8b-egxXFinIkx-HVkYMhNGy-qXG2j" target="_blank"><h2>Exercise 9</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1VXpPjHB-Ec9eNwMO085jc0Ic_7eKzYIM" target="_blank"><h2>Exercise 10</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1sJO6-pCN2a7oFAjRhBe_WIyMOy5-7GXY" target="_blank"><h2>Exercise 10</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=13mKsDub_O7JLD-r8gDBa1yzACLbs6Jyo" target="_blank"><h2>Exercise 11</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1sJO6-pCN2a7oFAjRhBe_WIyMOy5-7GXY" target="_blank"><h2>Exercise 11</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1PK_SxYfBMSmxACFaIaMIoNLvh7ehaqZG" target="_blank"><h2>Exercise 12</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1021qAWNaQwTHZEFf4DIO2sQQvr0IH6NM" target="_blank"><h2>Exercise 12</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1Jekjuwv1Mzny3Z-h9quKZT3KiH7-Cz1N" target="_blank"><h2>Exercise 13</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=13MIKOrkDMieWw6SVyDKzg5MKgfCrTNMh" target="_blank"><h2>Exercise 13</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=16bXQLtPisw8Zr9mZ8fV8sgEE-0ZBsSBj" target="_blank"><h2>Exercise 14</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1t55ZTAT2Qtrp7MlPEdfqg8mw56963UPj" target="_blank"><h2>Exercise 14</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a  href = "https://drive.google.com/open?id=15lB58Wg7ne1gTHK7B2AtPa3kbGsaN7zy" target="_blank"><h2>Exercise 15</h2></a></div>
+		<div class = "syllabus1"><a  href = "https://drive.google.com/open?id=1Hh_ZY81RLQw6JbWjR1kNfFpFmB-s7PRd" target="_blank"><h2>Exercise 15</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=19630U5a3yL28_vv3MNhQkk9i7j6HhPqs" target="_blank"><h2>Exercise 16</h2></a></div>
-
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1x4OLhiw5YP30czTEFsXuN4UOxKs3Z9hY" target="_blank"><h2>Exercise 17</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a  href = "https://drive.google.com/open?id=1rD6_EC88MOAmrprMr5yaLf4zkJWf6mla" target="_blank"><h2>Exercise 18</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1k56ZwawE-zZtK5hKlnAg9-O35-i2R5jV" target="_blank"><h2>Exercise 19</h2></a></div>
-
-
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1p8G8GV4aHiVeDwWIE7E7CBLUtIg19lNB" target="_blank"><h2>Exercise 20</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1wOSVnmoWD5OCCmE4dKSZWs6GK1M9nQCi" target="_blank"><h2>Exercise 21</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1pKoVKppvRsvVd-vItNUEqiWsDikCW5Hc" target="_blank"><h2>Exercise 22</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1vIMTBuBsSOMdxDcsK23HPgFb0kWwJh-5" target="_blank"><h2>Exercise 23</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1eU3UgJQL-frilnfm6aMHonKhhspgdMcK" target="_blank"><h2>Exercise 24</h2></a></div>
-	
-	
-		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1eo4CcgAqnT6W0OOXYY2uG7qVvmiEhl09" target="_blank"><h2>Exercise 25</h2></a></div>
-	
+		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1yZdhmpRKpmsN2ggAdatjXHpHoRBEQE0E" target="_blank"><h2>Exercise 16</h2></a></div>
 	
 
 </body></html>
