--- a/templates/ml.html
+++ b/templates/ml.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>python page</title>
+	<title>uml page</title>
 	<style type="text/css">
 	body{
 		background-color: white;
@@ -121,7 +121,7 @@
 	</tr>
 
 <tr><td colspan = "2" align = "center">
-<h1 style="color: white;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
+<h1 style="color: black;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
+<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
 	</table>
 </body></html>
