--- a/templates/htm.html
+++ b/templates/htm.html
@@ -121,7 +121,7 @@
 	</tr>
 
 <tr><td colspan = "2" align = "center">
-<h1 style="color: white;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
+<h1 style="color: black;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
+<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
 	</table>
 </body></html>
