--- a/templates/rp.html
+++ b/templates/rp.html
@@ -120,7 +120,7 @@
 		</td>
 	</tr>
 <tr><td colspan = "2" align = "center">
-<h1 style="color: white;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
+<h1 style="color: black;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
+<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
 	</table>
 </body></html>
