--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,9 @@
 
  .heading{
 		font-family: cursive;
-		 background-color: #0A1857;
+		background-color: #031458;
 		  color:white;
-		   height: 90px;
+		  
 		   
 		    
 	}
@@ -170,15 +170,16 @@ marquee img{
 
 }
 .heading{
-	width:auto;
-	height:100px;
+	width:100%;
+	height: 100%;
+
 	
 }
 .heading h1{
 	color:white;
 
 
-	padding-left: 30px;
+	
 	
 }
 .heading1 h1{
@@ -213,7 +214,7 @@ marquee img{
 		</td>
 	</tr>
 	<tr>
-		<td colspan  = "2" align="center" width="100%">
+		<td colspan  = "2" align="center" width="100%" style="background-color: #031458;">
 			<div class = "heading">
 			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
 		</td>
@@ -241,7 +242,7 @@ marquee img{
 
 	<tr>
 		<td colspan="2" align="center">
-			<h1 style="font-family:candara; color:#0A1857;">Available Compilers</h1>
+			<h1 style="font-family:candara; color:#031458;">Available Compilers</h1>
 		</td>
 	</tr>
 	
@@ -249,6 +250,7 @@ marquee img{
 		<div class = "inside">
 		<td align="center" width="50%">
 			<a href = "/c" ><img src = "{{url_for('static',filename = 'images/cc.png')}}" 	width="30%;"></a>
+
 		</td>
 		<td  align="center" width="50%">
 			<a href = "/c1"><img src = "{{url_for('static',filename = 'images/c+++.png')}}" width="25%;" ></a>
@@ -333,8 +335,7 @@ marquee img{
 	</tr></div>
 
 <tr><td colspan="2" width="100%" align="center">
-<h2 style="font-size: 20px;">To Submit your assingment Please <a href = "https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZXhcwTsHSHBNMPhzvKghKlClmNMTQLBzJmXKXzmRqQWBkQkGWfGllLgtgchSDPXPwDhXV">Click Here</a></h2></td></tr>
-
+<h2 style="font-size: 20px;">To Submit your assingment Please <a href = " https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZXhcwTsHSHBNMPhzvKghKlClmNMTQLBzJmXKXzmRqQWBkQkGWfGllLgtgchSDPXPwDhXV" target="_blank">Click Here</a></h2></td></tr>
 
 <tr><td colspan="2" width="100%" >
 
