--- a/templates/home.html
+++ b/templates/home.html
@@ -27,19 +27,21 @@
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
+font-size: 18px;
   border: none;
   outline: none;
-  background-color: red;
-  color: white;
+ background-color: transparent;
+  color: red;
   cursor: pointer;
   padding: 15px;
   border-radius: 10px;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: transparent;
 }
+
 
 @media screen and (max-width: 1060px) {
 .logo img{
