--- a/templates/home.html
+++ b/templates/home.html
@@ -27,10 +27,10 @@
   bottom: 20px;
   right: 30px;
   z-index: 99;
-font-size: 18px;
+  font-size: 18px;
   border: none;
   outline: none;
- background-color: transparent;
+  background-color: transparent;
   color: red;
   cursor: pointer;
   padding: 15px;
@@ -42,7 +42,52 @@ font-size: 18px;
   background-color: transparent;
 }
 
-
+.splash{
+			position: fixed;
+			top: 0;
+			left: 0;
+			height: 100vh;
+			width: 100vw;
+			background-color: #10B4FC;
+			font-size: 2em;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			animation-name: open;
+			animation-delay:3.5s;
+			animation-duration: 2s;
+			animation-fill-mode: forwards;
+		}
+		.splash img{
+			z-index: 9;
+		}
+		.splash::after, .splash::before{
+			content: "";
+			position: absolute;
+			background-color: #10B4FC;
+			height: 100vh;
+			width: 300vw;
+			z-index: 99;
+			animation-name: open;
+			animation-fill-mode: forwards;
+			animation-duration: 3s;
+		}
+		.splash after{
+			left:30vw;
+			animation-delay: 200ms;
+		}
+		.splash before{
+			left: 0;
+			animation-delay: 2s;
+		}
+		@keyframes open{
+			0%{
+				transform: translate(0, 0);
+			}
+			100%{
+				transform: translate(100%, 0);
+			}
+		}
 @media screen and (max-width: 1060px) {
 .logo img{
 	width: 80%;
@@ -226,7 +271,11 @@ marquee img{
 
 </style></head>
 <body>
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<div class = "splash">
+	<img src = "{{url_for('static',filename = 'images/gifmaker.gif')}}">
+</div>
+<div class = "container">
+		<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
 
 
@@ -395,6 +444,6 @@ function topFunction() {
 </marquee></td></tr>
 <tr><td colspan="2" width="100%" align="center">
 <footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2k17 - 2021)</footer></td></tr>
-</table>
+</table></div>
 </body>
 </html>
