--- a/templates/ads.html
+++ b/templates/ads.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>ads page</title>
+	<title>ADS</title>
 	<style type="text/css">
 	body{
 		background-color: white;
