--- a/templates/c122.html
+++ b/templates/c122.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>c page</title>
+	<title>C LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: #1E90FF;
