--- a/templates/dbms1.html
+++ b/templates/dbms1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>dbms page</title>
+	<title>DBMS LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
