--- a/templates/ds.html
+++ b/templates/ds.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>ds page</title>
+	<title>DATA STRUCTURES</title>
 	<style type="text/css">
 	body{
 		background-color: white;
