--- a/templates/ds1.html
+++ b/templates/ds1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>ds page</title>
+	<title>DS LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
