--- a/templates/ds2.html
+++ b/templates/ds2.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>ads page</title>
+	<title>ADS LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
