--- a/templates/htm.html
+++ b/templates/htm.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>html page</title>
+	<title>HTML</title>
 	<style type="text/css">
 	body{
 		background-color: white;
