--- a/templates/html1.html
+++ b/templates/html1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>wt page</title>
+	<title>WT LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
