--- a/templates/j1.html
+++ b/templates/j1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>JAVA</title>
+	<title>JAVA LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
