--- a/templates/ml1.html
+++ b/templates/ml1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>uml page</title>
+	<title>UML LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
