--- a/templates/nix1.html
+++ b/templates/nix1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>unix page</title>
+	<title>UNIX LAB MANUAL</title>
 	<style type="text/css">
 	body{
 		background-color: white;
