--- a/templates/p1.html
+++ b/templates/p1.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>python page</title>
+	<title>PYTHON</title>
 	<style type="text/css">
 	body{
 		background-color: white;
