--- a/templates/rp.html
+++ b/templates/rp.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>rp page</title>
+	<title>R PROGRAMMING</title>
 	<style type="text/css">
 	body{
 		background-color: white;
