--- a/templates/sql.html
+++ b/templates/sql.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>sql page</title>
+	<title>DBMS</title>
 	<style type="text/css">
 	body{
 		background-color: white;
