--- a/templates/p1.html
+++ b/templates/p1.html
@@ -139,34 +139,34 @@
 			<a href = "https://drive.google.com/open?id=1ahozfipYrzJLv5vqlRGBVvuRdmQzyWsN" target="_blank"><h2>Syllabus of PYTHON</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1xEDWqtQzqFRPfpH1K2d9XAoDQjxE4CFM/view" target="_blank"><h2>Exercise 1</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1xEDWqtQzqFRPfpH1K2d9XAoDQjxE4CFM/view?usp=sharing" target="_blank"><h2>Exercise 1</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1cKGdb1l82thraQGcKKnI-m0CvR2sR0FK/view" target="_blank"><h2>Exercise 2</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1cKGdb1l82thraQGcKKnI-m0CvR2sR0FK/view?usp=sharing" target="_blank"><h2>Exercise 2</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1DDjWMrDIbns0-ZRhb2UfMqh1ZBkeuEC3/view" target="_blank"><h2>Exercise 3</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1DDjWMrDIbns0-ZRhb2UfMqh1ZBkeuEC3/view?usp=sharing" target="_blank"><h2>Exercise 3</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1EylMVWzCDiC8AZgLa8ohQabmVSVSF6Av/view" target="_blank"><h2>Exercise 4</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1EylMVWzCDiC8AZgLa8ohQabmVSVSF6Av/view?usp=sharing" target="_blank"><h2>Exercise 4</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/10-AswXe2J6PtVtAWty2yGZYl3kcLolL_/view" target="_blank"><h2>Exercise 5</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/10-AswXe2J6PtVtAWty2yGZYl3kcLolL_/view?usp=sharing" target="_blank"><h2>Exercise 5</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/14nGhBgihPYQwhtjNltTVK_F_LaB4HJl7/view" target="_blank"><h2>Exercise 6</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/14nGhBgihPYQwhtjNltTVK_F_LaB4HJl7/view?usp=sharing" target="_blank"><h2>Exercise 6</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a  href = "https://drive.google.com/file/d/183zQ-OaI_ruxu2E-Hm0RMCUf96gXUwFo/view" target="_blank"><h2>Exercise 7</h2></a></div>
+		<div class = "syllabus1"><a  href = "https://drive.google.com/file/d/183zQ-OaI_ruxu2E-Hm0RMCUf96gXUwFo/view?usp=sharing" target="_blank"><h2>Exercise 7</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1UGx1YgbItDkGXQ-ddvz1AvzhsStjste-/view" target="_blank"><h2>Exercise 8</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1UGx1YgbItDkGXQ-ddvz1AvzhsStjste-/view?usp=sharing" target="_blank"><h2>Exercise 8</h2></a></div>
 
 
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/164j7h2ihHZxhAKC5FAz4bjZZdULt6xEL/view" target="_blank"><h2>Exercise 9</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/164j7h2ihHZxhAKC5FAz4bjZZdULt6xEL/view?usp=sharing" target="_blank"><h2>Exercise 9</h2></a></div>
 	
 	
-		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1R99PiVy5y80-fIc7KOpmvFAbvoVxtP9V/view" target="_blank"><h2>Exercise 10</h2></a></div>
+		<div class = "syllabus1"><a href = "https://drive.google.com/file/d/1R99PiVy5y80-fIc7KOpmvFAbvoVxtP9V/view?usp=sharing" target="_blank"><h2>Exercise 10</h2></a></div>
 	
 	
 		<div class = "syllabus1"><a href = "https://drive.google.com/open?id=1Egh91S5IyEpDtkoyWB6Ob36kqkpVKNZE" target="_blank"><h2>Exercise 11</h2></a></div>
