--- a/templates/home.html
+++ b/templates/home.html
@@ -80,6 +80,12 @@ marquee img{
 	height: 200px;
 	width: 200px;
 }
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 80px;
+  width: 80px;
+}
 }
 
 @media screen and (max-width: 768px) {
@@ -111,6 +117,12 @@ marquee img{
 	height: 160px;
 	width: 160px;
 }
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 70px;
+  width: 70px;
+}	
 }
 @media screen and (max-width: 668px) {
 	.logo img{
@@ -141,6 +153,12 @@ marquee img{
 	height: 140px;
 	width: 140px;
 }
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 60px;
+  width: 60px;
+}	
 }
 @media screen and (max-width: 568px) {
 	.logo img{
@@ -165,6 +183,12 @@ marquee img{
 	font-size: 20px;
 	
 }
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 55px;
+  width: 55px;
+}	
 .image2 img{
 	
 
@@ -193,8 +217,6 @@ marquee img{
 }
 .heading h1{
 	color:white;
-
-
 	
 	
 }
@@ -214,9 +236,17 @@ marquee img{
 marquee img{
 	height: 100px;
 	width: 100px;
+}
+
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 50px;
+  width: 50px;
 }	
 
 }
+
 
 
 
