--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
   
   cursor: pointer;
   padding: 15px;
-  border-radius: 230px;
+  
   
 }
 
@@ -249,8 +249,11 @@ marquee img{
 
 
 
-
-</style></head>
+</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+</head>
 <body>
 	<img src = "{{url_for('static',filename = 'images/arr1.png')}}" width="100px" height="100px" onclick="topFunction()" id="myBtn" title="Go to top">
 
@@ -290,6 +293,33 @@ function topFunction() {
 			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
 		</td>
 	</tr>
+	<tr>
+		<td align="center" width="50%" height="50px;">
+		</td>
+		<td  align="center" width="50%">
+		</td>
+	</tr>
+	<tr><td colspan="2" align="center" width="100%">
+		<ul class="nav justify-content-center">
+		<ul class="nav nav-pills">
+  <li class="nav-item">
+  	<button type="button" class="btn btn-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"></path>
+  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"></path>
+</svg>
+                <a href = "/" style="color: white;text-decoration: none;">Home</a>
+              </button>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Results</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/reg1">Tests</a>
+  </li>
+  
+</ul></ul>
+	</td></tr>
 	<tr>
 		<td align="center" width="50%" height="50px;">
 		</td>
@@ -415,9 +445,9 @@ function topFunction() {
 <marquee >
 
 	<a href = "https://www.programiz.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/pz.png')}}"></a>
-	<a href = "https://www.javatpoint.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/javatpoint.png')}}" width="300px" height="250px;"></a>
+	<a href = "https://www.javatpoint.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/tp.png')}}" width="300px" height="250px;" style="background-color: black;"></a>
 	<a href = "https://www.onlinegdb.com/" target="_blank"><img src = "{{url_for('static',filename = 'images/online.png')}}" width="300px" height="250px;"></a>
-	<a href = "https://paiza.io/en" target="_blank"><img src = "{{url_for('static',filename = 'images/paiza.png')}}" width="300px" height="250px;"></a>
+	<a href = "https://www.tutorialspoint.com/codingground.htm" target="_blank"><img src = "{{url_for('static',filename = 'images/paiza.png')}}" width="300px" height="250px;"></a>
 </marquee></td></tr>
 <tr><td colspan="2" width="100%" align="center">
 <footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2k17 - 2021)</footer></td></tr>
