--- a/templates/test1.html
+++ b/templates/test1.html
@@ -63,7 +63,7 @@
 	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"><a href = "/test1" style="color: white;text-decoration: none;">Mech</a></button></td></div></tr>
 	<tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;background-color: red;"onclick="document.location='/radio'">CSE</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;background-color: red;"onclick="document.location='/sub'">CSE</button></div></td>
 <td  width="50%">
 	<div class="nav justify-content-center">
 	<button type="button" class="btn btn-primary" style="width: 100px; background-color: blue;margin-bottom: 30px;"><a href = "/test1" style="color: white;text-decoration: none;">ECE</a></button></td></div></tr>
