--- a/templates/home.html
+++ b/templates/home.html
@@ -312,7 +312,7 @@ function topFunction() {
               </button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Results</a>
+    <a class="nav-link" href="/resu">Results</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/reg1">Tests</a>
