--- a/templates/132.html
+++ b/templates/132.html
@@ -63,7 +63,7 @@
 	</tr>
 	<tr><td >
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56736093.html'">1-1</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56736093.html'">1-1</button></div></td>
 <td >
 <div class="nav justify-content-center">
 	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56736090.html'">1-2</button></div></td></tr>
