--- a/templates/162.html
+++ b/templates/162.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>home page</title>
+	<title>Results</title>
 </head>
 <body>
 <!DOCTYPE html>
@@ -63,30 +63,30 @@
 	</tr>
 	<tr><td >
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56735763.html'">1-1</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56735763.html'">1-1</button></div></td>
 <td >
 <div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56735811.html'">1-2</button></div></td></tr>
+	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56735811.html'">1-2</button></div></td></tr>
 
 	<tr><td>
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56735876.html'">2-1</button></div></td><td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56735876.html'">2-1</button></div></td><td>
 <div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56735914.html'">2-2</button></div></td></tr>
+	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56735914.html'">2-2</button></div></td></tr>
 
 	<tr><td>
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56735966.html'">3-1</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56735966.html'">3-1</button></div></td>
 <td>
 <div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56736004.html'">3-2</button></div></td></tr>
+	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56736004.html'">3-2</button></div></td></tr>
 
 	<tr><td>
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56736070.html'">4-1</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56736070.html'">4-1</button></div></td>
 <td>
 <div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56736098.html'">4-2</button></div></td></tr>
+	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56736098.html'">4-2</button></div></td></tr>
 </table>
 
 </body>
