--- a/templates/192.html
+++ b/templates/192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>home page</title>
+	<title>Results</title>
 </head>
 <body>
 <!DOCTYPE html>
@@ -63,7 +63,7 @@
 	</tr>
 	<tr><td >
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='http://jntukresults.edu.in/view-results-56736097.html'">1-1</button></div></td>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='https://jntukresults.edu.in/view-results-56736097.html'">1-1</button></div></td>
 <td >
 <div class="nav justify-content-center">
 	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"onclick="document.location='/nodata'">1-2</button></div></td></tr>
