--- a/templates/home.html
+++ b/templates/home.html
@@ -315,7 +315,7 @@ function topFunction() {
     <a class="nav-link" href="/resu">Results</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/reg1">Tests</a>
+    <a class="nav-link" href="/test1">Tests</a>
   </li>
   
 </ul></ul>
