--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
 {% if item == 0 %}
 {% if key == 0 %}
 
-<label> What is the maximum possible length of an identifier?<b>Correct answer is {{vals}}</b></label><br>
+<label> What is the maximum possible length of an identifier?<b style="color: 'green;">Correct answer is {{vals}}</b></label><br>
 	<input type="radio" name="options0" value="a">16<br>
 	<input type="radio" name="options0" value="b">32<br>
 	<input type="radio" name="options0" value="c">64<br>
@@ -32,7 +32,7 @@
 
 {% elif item == 1 %}
 {% if key == 1 %}
-<label> Who developed the Python language?<b>Correct answer is {{vals}}</b></label><br>
+<label> Who developed the Python language?<b style="color: 'green;">Correct answer is {{vals}}</b></label><br>
 	<input type="radio" name="options1" value="a">Zim Den<br>
 	<input type="radio" name="options1" value="b">Guido van Rossum
 <br>
@@ -45,7 +45,7 @@
 
 {% elif item ==2 %}
 {% if key == 2 %}
-<label>In which year was the Python language developed?</label><b>Correct answer is {{vals}}</b><br>
+<label>In which year was the Python language developed?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options2" value="a">1995<br>
 	<input type="radio" name="options2" value="b">1972<br>
 	<input type="radio" name="options2" value="c">1981<br>
@@ -53,7 +53,7 @@
 
 {% elif item == 3 %}
 {% if key == 3 %}
-<label>In which language is Python written?</label><b>Correct answer is {{vals}}</b><br>
+<label>In which language is Python written?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options3" value="a">English<br>
 	<input type="radio" name="options3" value="b">PHP<br>
 	<input type="radio" name="options3" value="c">C<br>
@@ -61,7 +61,7 @@
 
 {% elif item == 4 %}
 {% if key == 4 %}
-<label>Which one of the following is the correct extension of the Python file?</label><b>Correct answer is {{vals}}</b><br>
+<label>Which one of the following is the correct extension of the Python file?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options4" value="a">.py<br>
 	<input type="radio" name="options4" value="b">.txt<br>
 	<input type="radio" name="options4" value="c">.html<br>
@@ -69,7 +69,7 @@
 
 {% elif item == 5 %}
 {% if key == 5 %}
-<label>In which year was the Python 3.0 version developed?</label><b>Correct answer is {{vals}}</b><br>
+<label>In which year was the Python 3.0 version developed?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options5" value="a">2004<br>
 	<input type="radio" name="options5" value="b">2008<br>
 	<input type="radio" name="options5" value="c">2012<br>
@@ -77,7 +77,7 @@
 
 {% elif item == 6 %}
 {% if key == 6 %}
-<label>What do we use to define a block of code in Python language?</label><b>Correct answer is {{vals}}</b><br>
+<label>What do we use to define a block of code in Python language?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options6" value="a">key<br>
 	<input type="radio" name="options6" value="b">brackets<br>
 	<input type="radio" name="options6" value="c">identation<br>
@@ -85,7 +85,7 @@
 
 {% elif item == 7 %}
 {% if key == 7 %}
-<label>Which character is used in Python to make a single line comment?</label><b>Correct answer is {{vals}}</b><br>
+<label>Which character is used in Python to make a single line comment?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options7" value="a">/<br>
 	<input type="radio" name="options7" value="b">//<br>
 	<input type="radio" name="options7" value="c">#<br>
@@ -93,7 +93,7 @@
 
 {% elif item == 8 %}
 {% if key == 8 %}
-<label>What is the method inside the class in python language?</label><b>Correct answer is {{vals}}</b><br>
+<label>What is the method inside the class in python language?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options8" value="a">object<br>
 	<input type="radio" name="options8" value="b">function<br>
 	<input type="radio" name="options8" value="c">attribute<br>
@@ -101,7 +101,7 @@
 
 {% elif item == 9 %}
 {% if key == 9 %}
-<label>Which of the following statements is correct regarding the object-oriented programming concept in Python?</label><b>Correct answer is {{vals}}</b><br>
+<label>Which of the following statements is correct regarding the object-oriented programming concept in Python?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options9" value="a">Classes are real-world entities while objects are not real<br>
 	<input type="radio" name="options9" value="b">Objects are real-world entities while classes are not real<br>
 	<input type="radio" name="options9" value="c">Both objects and classes are real-world entities<br>
@@ -109,7 +109,7 @@
 
 {% elif item == 10 %}
 {% if key == 10 %}
-<label> Which of the following is not a keyword in Python language?</label><b>Correct answer is {{vals}}</b><br>
+<label> Which of the following is not a keyword in Python language?</label><b style="color: 'green;">Correct answer is {{vals}}</b><br>
 	<input type="radio" name="options10" value="a">val<br>
 	<input type="radio" name="options10" value="b">rise<br>
 	<input type="radio" name="options10" value="c">try<br>
